force-app/main/default/objects/ServiceAppointment/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The visitor captured for this site visit. ParentRecordId is polymorphic and can be pointed at any record by the caller, so this explicit lookup is what actually ties the booking back to one Lead. One Lead can have many site visits.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>