force-app/main/default/objects/ServiceAppointment/fields/Mediator__c.field-meta.xml
<CustomField>
    <fullName>Mediator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The mediator (Contact) taking this site visit. Standard ServiceResource only relates to a User, so a Contact lookup is the only way to book a mediator's time; availability checks read Scheduled Start/End on this field.</description>
    <label>Mediator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Visits (as Mediator)</relationshipLabel>
    <relationshipName>Mediator_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>