force-app/main/default/objects/ServiceAppointment/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project this site visit is for. Scheduled Start/End, Service Resource (sales rep), Service Territory and Status are standard Scheduler fields - this lookup is the only custom piece needed to tie a booking back to the portfolio (FR-6).</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>